--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a:hover {
   text-decoration: none !important;
 }
 .navbar {
-  padding: 0.5rem 0 !important;
+  padding: 1rem 0 !important;
 }
 .navbar-brand {
   font-size: 24px !important;
@@ -37,7 +37,7 @@ a:hover {
   position: absolute;
   right: 5px;
   z-index: 999;
-  font-size: 30px;
+  font-size: 26px;
 }
 .button a {
   text-decoration: none;
@@ -122,3 +122,29 @@ a:hover {
   width: 50%;
   font-size: 18px;
 }
+
+.about {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.about-me img {
+  width: 90%;
+  margin: 0 auto !important;
+  border-radius: 50%;
+}
+.about p {
+  font-size: 16px !important;
+}
+/* .img-bg {
+  width: 80%;
+  height: 100%;
+  position: absolute;
+  background: #111;
+  left: 15%;
+  top: 10%;
+  border-radius: 50%;
+  z-index: -111;
+} */
