add knowledge section

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ a:hover {
   top: 80%;
 }
 .expertize {
-  background-color: #ffd717;
+  background-color: #ace6f6;
 }
 .knowledge {
   display: flex;
