--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ a:hover {
 }
 .company_detail p {
   margin: 0;
-  font-family: 'Esteban', serif;
+  font-weight: 400;
 }
 .company_detail small {
   color: rgba(0, 0, 0, 0.5);
