--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ a:hover {
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
   height: 99%;
-  width: 100%;
+  width: 100% !important;
   left: 0;
   top: 0;
   bottom: 0;
