--- a/style.css
+++ b/style.css
@@ -376,3 +376,31 @@ a:hover {
 .company_detail small {
   color: rgba(0, 0, 0, 0.5);
 }
+footer {
+  background-color: #0e153a;
+  color: #f1f1f1;
+}
+.link ul {
+  padding: 0;
+}
+.link ul > a > li {
+  list-style: none;
+  font-size: 12px;
+}
+.link,
+.connect,
+.newsletter,
+.questions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  height: 150px;
+  padding: 0 0.8em;
+  /* border-right: 0.5px solid darkslategrey; */
+}
+
+.connect .join a > i {
+  font-size: 24px !important;
+  margin-right: 0.2em;
+}
