--- a/style.css
+++ b/style.css
@@ -8,18 +8,34 @@ body {
 * {
   font-family: 'Montserrat', sans-serif;
 }
-body .btn:focus,
-.btn:active:focus,
-.btn.active:focus {
+a {
+  outline: none !important;
+}
+body button:focus,
+button:active:focus,
+button.active:focus {
   outline: none;
   box-shadow: none;
 }
-.btn {
-  border-radius: 0 !important;
-  padding: 0.5em 1em !important;
-  background-color: #3d5af1 !important;
-  color: #fff !important;
-  border: none !important;
+h4 {
+  font-weight: 600 !important;
+}
+.button-primary {
+  padding: 0.5em 1em;
+  border-radius: 0px;
+  background-color: #3d5af1;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+}
+.button-primary:hover {
+  box-shadow: 0 8px 16px 0 rgba(39, 17, 45, 0.1);
+  -webkit-transform: scale(1.05) translate(0px, -4px);
+  -ms-transform: scale(1.05) translate(0px, -4px);
+  transform: scale(1.05) translate(0px, -4px);
 }
 .intro {
   position: relative;
@@ -403,4 +419,24 @@ footer {
 .connect .join a > i {
   font-size: 24px !important;
   margin-right: 0.2em;
+}
+
+.media {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
+}
+.media i {
+  font-size: 24px;
+}
+
+.collab {
+  padding: 1em 0;
+  background-color: #ace6f6;
+}
+.copyright {
+  background-color: #0e153a;
+  font-size: 12px;
+  color: #fff;
 }
