--- a/media.css
+++ b/media.css
@@ -10,8 +10,16 @@
     align-items: center;
   }
   .bio p {
-    width: 90%;
     text-align: center;
+  }
+  .modal-body h4 {
+    font-size: 18px;
+  }
+  .modal-body p {
+    font-size: 12px;
+  }
+  .modal-body img {
+    width: 30%;
   }
   .wrap-nav li {
     padding: 1em;
