--- a/style.css
+++ b/style.css
@@ -459,9 +459,10 @@ footer {
   background-color: #ace6f6;
 }
 .message p {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
   color: #0e153a;
+  font-family: 'Esteban', serif;
 }
 .copyright {
   background-color: #0e153a;
