--- a/media.css
+++ b/media.css
@@ -14,6 +14,9 @@
   li {
     font-size: 12px !important;
   }
+  .menu {
+    display: none !important;
+  }
   .button-primary {
     font-size: 14px;
   }
@@ -23,6 +26,9 @@
   }
   .nav-item a {
     font-size: 14px;
+  }
+  .button {
+    display: inline;
   }
   .bio {
     align-items: center;
