--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ button.active:focus {
   width: 100%;
   height: 100vh;
   background: #000;
-  opacity: 0.5;
+  opacity: 0.6;
   z-index: -111;
 }
 a {
@@ -289,10 +289,12 @@ a:hover {
 }
 .knowledge {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 90%;
   margin: 0 auto;
+  text-align: center;
 }
 .speacilize {
   cursor: pointer;
@@ -301,14 +303,17 @@ a:hover {
   border-radius: 0.5em 0.8em;
   transition: all 0.3s ease-in;
 }
+.speacilize img {
+  width: 40%;
+}
 .speacilize p {
   padding: 0.5em 0;
   height: auto;
   font-family: 'Esteban', serif;
 }
-.speacilize:hover {
+/* .speacilize:hover {
   background-color: #f8f8f8;
-}
+} */
 .lang {
   width: 90%;
   margin: 0 auto;
