--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ html {
 body {
   background-color: #fff !important;
 }
+main {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+}
 p {
   font-size: 16px !important;
 }
@@ -69,7 +74,7 @@ button.active:focus {
 }
 .intro {
   position: relative;
-  background: url('assets/bg.jpg') no-repeat 50% 50%;
+  background: url('assets/portfolio_banner.jpg') no-repeat 50% 50%;
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -473,4 +478,27 @@ footer {
 .copyright {
   background-color: #0e153a;
   color: #fff;
+}
+
+#loading {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  z-index: 1111;
+  background: #ace6f6 !important;
+  display: none;
+}
+
+#loading img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10% !important;
 }
